@@ -248,6 +248,9 @@ public enum ConfigNodes {
             PROT_CHEAT("protection.cheat_protection","true",
             		"",
                     "# Prevent fly and double block jump cheats."),
+            PROT_REGEN_DELAY("protection.regen_delay","0s",
+                    "",
+                    "# The amount of time it takes for a protected block to regenerate.  Use zero for no delay."),
             UNCLAIMED_ZONE("unclaimed","",
             		"", "",
                     "############################################################",
